# PointSDF

./: .gitignore  DOCUMENTATION.md  INSTALL.md  LICENSE  README.md  diagnose_decode.py  environment.yaml  environment.yml  environment_new.yaml  export_encoder_latents.py  reconstruct.py  requirements.txt  select_checkpoint.py  test.py  train.py  train_deepsdf.py
config_files/: extract_sdf.yaml  reconstruct_from_latent.yaml  shape_completion.yaml  test.yaml  train_autodecoder.yaml  train_sdf.yaml
configs/: train_deepsdf.yaml  train_encoder.yaml
data/: augmentation.py  dataset_sdf.py  encoder_dataset.py  extract_sdf.py  merge_mesh_traits.py  ply_index.py  ply_loader.py  prepare_dataset.py  rgbd_corepp_dataset.py
misc/: _c7.py  compare_latent_pca.py  compute_bbox_stats.py  corepp_metrics.py  debug_rgbd_frame.py  eda.ipynb  eda_plots.py  encoder_preprocessing_viz.py  export_cohort_distribution_compare.py  export_eda_notebook_pdf.py  export_encoder_preprocessing_pdf.py  export_error_histograms_eda.py  export_latent_pca_encoder_compare.py  export_latent_pca_thesis.py  export_volume_scatter_eda.py  latent_similarity.py  plotting.ipynb  report_46943_grid_benchmark.py  report_metrics_by_group.py  report_metrics_by_volume.py  sweep.csv  sweep2.csv  sweep3.csv  thesis_style.py  training.csv  training2.csv  training3.csv  visualize_latents.py
model/: encoder_pointnet2.py  model_sdf.py  train_sdf.py
models/: __init__.py  build_encoder.py  corepp_encoder.py  decoder.py  encoder.py  (+1 more)
pointnet2_ops/: __init__.py  pointnet2_modules.py  pointnet2_utils.py  pyproject.toml  setup.py
(+57 files in other folders)
